# pixel

./: .astrorc.js  .dockerignore  .endgame  .env.example  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .lfsconfig  .oxlintrc.json  .sourcery.yaml  .tinyb  BUILD_FIXES_SUMMARY.md  BUILD_OPTIMIZATIONS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.azure  EVIDENCE_SYSTEM_IMPLEMENTATION.md  MENTAL_ARENA_BRIDGE_ENHANCEMENTS.md  MENTAL_HEALTH_REFACTOR.md  MICROSERVICES_MIGRATION_COMPLETE.md  Makefile  README.md  TEST_FIXES_SUMMARY.md  TYPESCRIPT_DEBUGGING.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  add_ai_to_lfs.py  amplify-debug.yml  amplify-fixed.yml  amplify-simple.yml  amplify.yml  astro.config.aws.mjs  astro.config.azure.mjs  astro.config.backup.mjs  astro.config.mjs  astro.config.vercel.mjs  azure-pipelines-1.yml  (+73 more)
.cursor/: environment.json  mcp.json
.github/: copilot-instructions.md
.gitpod/: mcp.json
.notes/: ai-penetration-testing-plan.md  project-overview.md  status.mdx  tasks-template.mdx  tasks.mdx
.trunk/: actions  notifications  out  tools  trunk.yaml
ai/: Edge_Case_Pipeline.ipynb  README.md  __init__.py  chain_templates.json  combine_datasets.py  dareofficer.ipynb  extract_features.py  extract_features_from_samples.py  extract_small_sample.py  facial-emotions-image-detection-vit.ipynb  facial-expression-eda-cnn.ipynb  finetuning.ipynb  generate_dialogues.js  generate_dialogues.sh  generate_prompts.py  generate_synthetic.py  install-dataset-deps.sh  merged_mental_health_dataset.jsonl  meta_snythetic.ipynb  synthetic_dashboard.py  (+2 more)
scripts/: OPTIMIZATION.md  README.md  add-audit-logging.js  agent_automation.py  aggressive-auto-commit.sh  analyze-bundle-size.js  auto-commit.sh  azure-commands.sh  backup-validator.py  bundle-analyzer.js  check-amplify-deployment.sh  check-large-deps.js  check-ollama.py  create-validation-api-token.ts  deploy-amplify-fixed.sh  deploy-azure-app-service.sh  deploy-azure-bicep.sh  deploy-azure.sh  deploy-platform.js  deploy.sh  diagnose-openmemory.mjs  diagnostics.ts  docker-pull-azure.sh  docker-push-azure.sh  docker-startup-fallback.sh  enhanced-deploy.js  extract-backgrounds.ts  fix-env-access.sh  fix-playwright-apis.sh  fix-unused-errors.sh  force-azure-redeploy.sh  health-check.js  immediate-migration.mjs  initialize-mem0ai.mjs  install-azure-cli-userspace.sh  load-test.ts  mcp-manager.js  mem0_config.py  memory-sync.py  mental_llama_python_handler.py  (+26 more)
scripts/mem0ai/: mem0_config.py  mem0_mcp_client.py  mem0_mcp_server.py  retrieve_memories.py  search_original_memories.py  setup_mem0_config.py  test_memory_connection.py
(+1130 files in other folders)
